# autoray

./: .gitattributes  .gitignore  .lgtm.yml  .travis.yml  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md  dependabot.yml
.github/workflows/: pypi-release.yml  tests.yml
autoray/: __init__.py  _version.py  autoray.py  compiler.py  grad.py
autoray/experimental/: complexity_tracing.py  complexity_tracing_example.ipynb
autoray/lazy/: __init__.py  core.py  draw.py  linalg.py
ci/azure/: install.yml  unit-tests.yml
ci/requirements/: base.txt  jax.txt  py-base.yml  py-jax.yml  py-mac.yml  py-tensorflow.yml  py-torch.yml  py-win.yml  py310.yml  py36.yml  py37.yml  py38-win.yml  py38.yml  py39.yml  tensorflow.txt  torch.txt
docs/: automatic_dispatch.md  changelog.md  compilation.ipynb  conf.py  develop.md  development.md  index.md  installation.md  lazy_computation.ipynb
docs/_pygments/: _pygments_dark.py  _pygments_light.py
docs/_static/: my-styles.css
docs/utils/: resolve_changelog.py
tests/: conftest.py  test_autocompile.py  test_autoray.py  test_grad.py  test_lazy.py  test_linalg.py  test_random.py
