[project]
name = "autoray"
description = "Abstract your array operations."
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]
authors = [{ name = "Johnnie Gray", email = "johnniemcgray@gmail.com" }]
license = { text = "Apache" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "agnostic",
    "array",
    "autograd",
    "cupy",
    "dask",
    "dispatch",
    "jax",
    "numeric",
    "numpy",
    "tensor",
    "tensorflow",
]

[project.optional-dependencies]
tests = ["numpy", "coverage", "pytest", "pytest-cov"]
docs = [
    "astroid",
    "furo",
    "ipython",
    "myst-nb",
    "setuptools_scm",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx",
]

[project.urls]
"Documentation" = "https://autoray.readthedocs.io/"
"Repository" = "https://github.com/jcmgray/autoray/"
"Issues" = "https://github.com/jcmgray/autoray/issues"
"Changelog" = "https://github.com/jcmgray/autoray/releases"


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "autoray/_version.py"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "once"

[tool.coverage.run]
omit = ["*/autoray/experimental/*"]
source = ["autoray"]

[tool.pylama]
ignore = "C901"
max_line_length = 79

[tool.ruff]
line-length = 79
target-version = "py310"
lint.ignore = ["E741"]

[tool.black]
line-length = 79
target-version = ['py310']

# ---------------------------------- pixi ----------------------------------- #

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.pypi-dependencies]
autoray = { path = ".", editable = true }

[tool.pixi.feature.full.dependencies]
dask = "*"
matplotlib = "*"
networkx = "*"
numba = "*"
numpy = "*"
opt_einsum = "*"
scipy = "*"
sparse = "*"

[tool.pixi.feature.jax]
platforms = ["linux-64"]
[tool.pixi.feature.jax.pypi-dependencies]
jax = { version = "*", extras = ["cpu"] }

[tool.pixi.feature.torch]
platforms = ["linux-64"]
[tool.pixi.feature.torch.pypi-dependencies]
torch = { version = "*", index = "https://download.pytorch.org/whl/cpu" }

[tool.pixi.feature.tensorflow]
platforms = ["linux-64"]
[tool.pixi.feature.tensorflow.pypi-dependencies]
tensorflow = "*"

[tool.pixi.feature.tests.dependencies]
coverage = "*"
pytest = "*"
pytest-cov = "*"

[tool.pixi.feature.pyold.dependencies]
python = "3.10.*"
[tool.pixi.feature.pymid.dependencies]
python = "3.12.*"
[tool.pixi.feature.pynew.dependencies]
python = "3.14.*"

[tool.pixi.feature.docs.dependencies]
astroid = "*"
furo = "*"
ipython = "*"
myst-nb = "*"
ruff = "*"
setuptools_scm = "*"
sphinx = "*"
sphinx-autoapi = "*"
sphinx-copybutton = "*"
sphinx-design = "*"
[tool.pixi.feature.docs.pypi-dependencies]
squeaky = "*"

[tool.pixi.environments]
testpyold = { features = ["pyold", "full", "tests"] }
testpymid = { features = ["pymid", "full", "tests"] }
testpynew = { features = ["pynew", "full", "tests"] }
testjax = { features = ["pymid", "full", "jax", "tests"] }
testtorch = { features = ["pymid", "full", "torch", "tests"] }
testtensorflow = { features = ["pymid", "full", "tensorflow", "tests"] }
docs = { features = ["pynew", "docs"] }

[tool.pixi.tasks.test]
cmd = """
pytest \
    tests/ \
    --cov=autoray \
    --cov-report=xml \
    --verbose \
    --durations=10
"""
cwd = "."

[tool.pixi.feature.docs.tasks]
docs = { cmd = "sphinx-build -b html docs docs/_build/html", cwd = "." }
docs-clean = { cmd = "rm -rf docs/_build", cwd = "." }
docs-serve = { cmd = "python -m http.server -d docs/_build/html 8000", cwd = "." }
lint = { cmd = """
    ruff check --select I
    && ruff format --check
""", cwd = "." }
format = { cmd = """
    ruff check --select I --fix
    && ruff format
    && squeaky `find . -name \"*.ipynb\"`
""", cwd = "." }
