3.10[project]
name = "autoray"
description = "Abstract your array operations."
readme = { file = "README.md", content-type = "text/markdown" }
dynamic = ["version"]
authors = [{ name = "Johnnie Gray", email = "johnniemcgray@gmail.com" }]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
keywords = [
    "agnostic",
    "array",
    "autograd",
    "cupy",
    "dask",
    "dispatch",
    "jax",
    "mlx",
    "numeric",
    "numpy",
    "tensor",
    "tensorflow",
]

[project.optional-dependencies]
tests = [
    "numpy",
    "coverage",
    "pytest",
    "pytest-cov",
]
docs = [
    "furo",
    "ipython",
    "myst-nb",
    "setuptools-scm",
    "sphinx-autoapi",
    "sphinx-copybutton",
    "sphinx",
]

[project.urls]
"Documentation" = "https://autoray.readthedocs.io/"
"Repository" = "https://github.com/jcmgray/autoray/"
"Issues" = "https://github.com/jcmgray/autoray/issues"
"Changelog" = "https://github.com/jcmgray/autoray/releases"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "autoray/_version.py"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "once"

[tool.coverage.run]
omit = ["*/autoray/experimental/*"]
source = ["autoray"]

[tool.ruff]
line-length = 79
target-version = "py310"
lint.ignore = ["E741"]

# ---------------------------------- pixi ----------------------------------- #

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [
    "linux-64",
    "osx-64",
    { name = "osx-arm64-macos26", platform = "osx-arm64", macos = "26.0" },
    "win-64",
]

[tool.pixi.pypi-dependencies]
autoray = { path = ".", editable = true }

[tool.pixi.feature.full.dependencies]
dask = ">=2026.7.1"
matplotlib = ">=3.11.0"
networkx = ">=3.6.1"
numpy = ">=2.4.6"
opt_einsum = ">=3.4.0"
scipy = ">=1.17.1"
sparse = ">=0.17.0"

[tool.pixi.feature.jax]
platforms = ["linux-64"]
[tool.pixi.feature.jax.pypi-dependencies]
jax = { version = ">=0.10.2", extras = ["cpu"] }

[tool.pixi.feature.torch]
platforms = ["linux-64"]
[tool.pixi.feature.torch.pypi-dependencies]
torch = { version = "*", index = "https://download.pytorch.org/whl/cpu" }

[tool.pixi.feature.tensorflow]
platforms = ["linux-64"]
[tool.pixi.feature.tensorflow.pypi-dependencies]
tensorflow = ">=2.21.0"

[tool.pixi.feature.mlx]
platforms = ["linux-64", "osx-arm64-macos26"]
[tool.pixi.feature.mlx.dependencies]
mlx = ">=0.32.0"

[tool.pixi.feature.cupy]
platforms = ["linux-64"]
[tool.pixi.feature.cupy.dependencies]
cupy = ">=13.4.1"

[tool.pixi.feature.testing.dependencies]
coverage = ">=7.15.2"
pytest = ">=9.1.1"
pytest-cov = ">=7.1.0"

[tool.pixi.feature.testing.pypi-dependencies]
build = ">=1.5.0"

[tool.pixi.feature.pyold.dependencies]
python = "3.11.*"
[tool.pixi.feature.pymid.dependencies]
python = "3.13.*"
[tool.pixi.feature.pynew.dependencies]
python = "3.14.*"

[tool.pixi.feature.docs.dependencies]
astroid = ">=4.1.2"
furo = ">=2025.12.19"
ipython = ">=9.15.0"
myst-nb = ">=1.4.0"
ruff = ">=0.15.21"
setuptools_scm = ">=10.2.0"
sphinx = ">=9.1.0"
sphinx-autoapi = ">=3.8.0"
sphinx-copybutton = ">=0.5.2"
sphinx-design = ">=0.7.0"
[tool.pixi.feature.docs.pypi-dependencies]
squeaky = ">=0.7.1"

[tool.pixi.environments]
testpyold = { features = ["pyold", "full", "testing"] }
testpymid = { features = ["pymid", "full", "testing"] }
testpynew = { features = ["pynew", "full", "testing"] }
testcupy = { features = ["pymid", "full", "cupy", "testing"] }
testjax = { features = ["pymid", "full", "jax", "testing"] }
testmlx = { features = ["pymid", "full", "mlx", "testing"] }
testtensorflow = { features = ["pymid", "full", "tensorflow", "testing"] }
testtorch = { features = ["pymid", "full", "torch", "testing"] }
docs = { features = ["pynew", "docs"] }

[tool.pixi.tasks.pytest]
default-environment = "testpymid"
cmd = "pytest"
cwd = "."
description = "Run pytest."

[tool.pixi.tasks.test]
cmd = """
pytest \
    tests/ \
    --cov=autoray \
    --cov-report=xml \
    --verbose \
    --durations=10
"""
cwd = "."
default-environment = "testpymid"
description = "Run the test suite."

[tool.pixi.tasks.build-test]
cmd = """
    rm -rf dist/build-test &&
    python -m build --sdist --wheel --outdir dist/build-test
"""
cwd = "."
description = "Build source and wheel distributions as a smoke test."
default-environment = "testpymid"

[tool.pixi.feature.docs.tasks.docs]
cmd = "sphinx-build -b html docs docs/_build/html"
cwd = "."
description = "Build the HTML documentation."

[tool.pixi.feature.docs.tasks.readthedocs]
cmd = "sphinx-build -T -b html docs $READTHEDOCS_OUTPUT/html"
cwd = "."
description = "Specific task for building docs on ReadTheDocs."

[tool.pixi.feature.docs.tasks.docs-clean]
cmd = "rm -rf docs/_build"
cwd = "."
description = "Remove documentation build artifacts."

[tool.pixi.feature.docs.tasks.docs-serve]
cmd = "python -m http.server -d docs/_build/html 8000"
cwd = "."
description = "Serve the documentation locally."

[tool.pixi.feature.docs.tasks.lint]
cmd = """
    ruff check --select I &&
    ruff format --check
"""
cwd = "."
description = "Check code formatting and imports with ruff."

[tool.pixi.feature.docs.tasks.format]
cmd = """
    ruff check --select I --fix &&
    ruff format
"""
cwd = "."
description = "Apply code formatting and fix imports with ruff."

[tool.pixi.feature.docs.tasks.format-all]
cmd = """
    ruff check --select I --fix &&
    ruff format &&
    find . -name "*.ipynb" -print0 | xargs -0 squeaky
"""
cwd = "."
description = "Format all files including notebooks with squeaky."
