[tool:pytest]
testpaths = tests
addopts = --cov=autoray --cov-report term-missing --verbose --cov-report xml:coverage.xml

[coverage:run]
omit=autoray/_version.py

[versioneer]
VCS = git
style = pep440
versionfile_source = autoray/_version.py
versionfile_build = autoray/_version.py
tag_prefix = ''
parentdir_prefix = .

[metadata]
license_file = LICENSE
